[project]
name = "devinsights"
version = "0.1.0"
description = "Personal DevOps analytics platform on Azure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports/vars, undefined names)
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
